# idaas-python-akless-aws-adapter

./: .gitignore  README.md  README_zh.md  pyproject.toml  run_sample.sh
.github/workflows/: publish.yml
cloud_idaas/adapter/aws/: __init__.py
cloud_idaas/adapter/aws/domain/: __init__.py  constants.py
cloud_idaas/adapter/aws/pam/: __init__.py  credential_factory.py  credentials_provider.py
samples/: aws_s3_sample.py  cloud_idaas_new.json
tests/: conftest.py  test_aws_credentials_provider_adapter.py  test_credential_factory.py  test_credentials_provider.py
